--- a/html/welcome.html
+++ b/html/welcome.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Le domaine de l'université en Haïti, l'Université Publique du Nord au Cap-Haïtien, est accessible à l'adresse https://upnch.univ.ht" />
+    <meta name="description" content="EGLISE BAPTISTE JERUSALEM DE FORT-LIBERTE" />
 
 
-    <title>Universités publiques d'Haiti </title>
+    <title>EBJFL </title>
 </head>
 <style>
     .bg {
@@ -69,11 +69,9 @@
 </style>
 <body class="bg">
     <div class="container">
-        <div class="titre">  Bienvenue sur le service des universites d'Haiti</div>
+        <div class="titre">  Bienvenue sur EBJFL</div>
         <div class="content">
-            <!-- <div class="pub"><img src="images/eleve1.jpg" width="300" /></div>
-            <div class="pub"><img src="images/eleve2.jpg" width="300" /></div>
-            <div class="pub"><img src="images/eleve3.jpg" width="300" /></div> -->
+           WELCOME
         </div>
         
     </div>
